harness/clients/ratatui/tests/snapshots/widgets__custom-degraded.snap
---
source: harness/clients/ratatui/tests/widgets.rs
expression: "draw(surface, 24, Theme::monochrome())"
---
<buildgraph.dag>
proto -> agui -> kernel
