harness/clients/ratatui/tests/snapshots/widgets__custom.snap
---
source: harness/clients/ratatui/tests/widgets.rs
expression: "draw(surface, 60, Theme::colour())"
---
<buildgraph.dag>
proto -> agui -> kernel
