harness/clients/ratatui/tests/snapshots/widgets__diff-degraded.snap
---
source: harness/clients/ratatui/tests/widgets.rs
expression: "draw(surface, 24, Theme::monochrome())"
---
── src/lib.rs
@@ -1,2 +1,3 @@
 fn main() {
+    println!("hi");
 }
@@ -40,1 +41,1 @@
-let x = 1;
+let x = 2;
