harness/clients/ratatui/tests/snapshots/widgets__form-degraded.snap
---
source: harness/clients/ratatui/tests/widgets.rs
expression: "draw(surface, 24, Theme::monochrome())"
---
field 1 of 5
* Branch       main
enter: next, last field…
