harness/clients/ratatui/tests/snapshots/widgets__form-inline.snap
---
source: harness/clients/ratatui/tests/widgets.rs
expression: drawn
---
* Branch       main
* Token        ••••••
[ Create ]
