harness/clients/ratatui/tests/snapshots/widgets__form.snap
---
source: harness/clients/ratatui/tests/widgets.rs
expression: "draw(surface, 60, Theme::colour())"
---
field 1 of 5
* Branch       main
enter: next, last field submits `Create branch`
