harness/clients/ratatui/tests/snapshots/widgets__markdown.snap
---
source: harness/clients/ratatui/tests/widgets.rs
expression: "draw(surface, 60, Theme::colour())"
---
Here is the fix:

────────────
  fn main() {
      println!("hi");
  }
────────────
