harness/clients/ratatui/tests/snapshots/widgets__progress-degraded.snap
---
source: harness/clients/ratatui/tests/widgets.rs
expression: "draw(surface, 24, Theme::monochrome())"
---
indexing the workspace …
