harness/clients/ratatui/tests/snapshots/widgets__progress.snap
---
source: harness/clients/ratatui/tests/widgets.rs
expression: "draw(surface, 60, Theme::colour())"
---
[###############################] indexing the workspace 9/9
