harness/clients/ratatui/tests/snapshots/widgets__question-degraded.snap
---
source: harness/clients/ratatui/tests/widgets.rs
expression: "draw(surface, 24, Theme::monochrome())"
---
Which crate?
> orrery-proto
  orrery-kernel (defaul…
